[gd_scene load_steps=6 format=2]

[ext_resource path="res://TwoBirds.png" type="Texture" id=1]
[ext_resource path="res://Bird.gd" type="Script" id=2]
[ext_resource path="res://SFX_-_gun_shot_01.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28.5, 28.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 27, 288 )

[node name="Bird" type="Area2D" groups=["dangerous"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -0.5 )
shape = SubResource( 1 )

[node name="DropArea" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropArea"]
position = Vector2( 1, 331 )
shape = SubResource( 2 )

[node name="DeathTimer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_Bird_area_entered"]
[connection signal="area_entered" from="DropArea" to="." method="_on_DropArea_area_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
